# honeyscanner

./: .gitignore  pyproject.toml
honeyscanner/: core.py  main.py  report_generator.py
honeyscanner/active_attacks/: attack_orchestrator.py  base_attack.py  software_exploit.py
honeyscanner/passive_attacks/: attack_orchestrator.py
honeyscanner/passive_attacks/container_security_scanner/: container_security_scanner.py
honeyscanner/passive_attacks/static_analyzer/: static_analyzer.py
honeyscanner/passive_attacks/vuln_analyzer/: vuln_analyzer.py
src/honeyscanner/: core.py  demo.py  main.py  report_generator.py  requirements.txt
src/honeyscanner/active_attacks/: base_attack.py  software_exploit.py
src/honeyscanner/honeypots/: cowrie.py
src/honeyscanner/passive_attacks/: attack_orchestrator.py
src/honeyscanner/passive_attacks/container_security_scanner/: container_security_scanner.py
src/honeyscanner/passive_attacks/honeypot_detector/: detect_honeypot.py
src/honeyscanner/passive_attacks/static_analyzer/: static_analyzer.py
src/honeyscanner/passive_attacks/vuln_analyzer/: vuln_analyzer.py
