[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "honeyscanner"
version = "1.0.0"
authors = [
  { name="Aristofanis Chionis Koufakos" },
  { name = "Akshit Maheshwary" }
]
dynamic = ["dependencies"]
description = "Honeyscanner: A vulnerability analyzer for honeypots"
readme = "README.md"
requires-python = ">=3.10.12"
keywords = ["honeyscanner", "honeypot", "vulnerability analyzer", "threat intel", "cybersecurity"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/spoiicy/honeyscanner"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["honeyscanner"]
namespaces = false