[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "honeyscanner"
version = "0.1.0"
authors = [
  { name="Aristofanis Chionis" },
]

maintainers = [
  { name="Akshit Maheshwary" },
]
keywords = ["threat intel", "honeypot", "honeyscanner", "cybersecurity", "vulnerability analysis"]
dynamic = ["dependencies"]

description = "Honeyscanner: A vulnerability analyzer for honeypots"
readme = "README.md"
requires-python = ">=3.10.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/spoiicy/honeyscanner/tree/refactor"


[tool.setuptools.dynamic]
dependencies = {file = ["src/honeyscanner/requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]